# hitchhikers-engine

./: .gitignore  .gitmodules  Cargo.toml  Makefile
.github/workflows/: rust_clippy_check.yaml  rust_format_check.yaml  rust_unit_test.yaml
crates/he42-vulkan/: Cargo.toml
crates/he42-vulkan/src/: debug_utils_messenger.rs  instance.rs  lib.rs  vulkan_library.rs
crates/model/: .gitignore  Cargo.toml
crates/model/src/: lib.rs  model.rs  obj.rs  vertex.rs
crates/object-parser/: Cargo.toml
crates/object-parser/src/: model.rs  obj.rs  vertex.rs
shaders/: shader.frag  shader.vert
src/: app.rs  engine.rs  main.rs  vertex.rs  vulkan.rs  vulkan_renderer.rs  vulkan_renderer_old.rs
src/Vulkan/: builder.rs  errors.rs  extension_not_found.rs  image_views.rs  instance.rs  physical_device.rs  shader.rs  swap_chain.rs  swapchain.rs  validation_layers.rs
src/Vulkan/device/: device.rs  mod.rs  physical_device.rs
src/Vulkan/graphics_pipeline/: create_graphics_pipeline.rs  rasterizer.rs  shader.rs  vertex_input.rs
src/engine/: errors.rs
src/utils/: all_uniques.rs  const_str_to_cstr.rs  error_creator.rs  get_all_uniques.rs  mod.rs  pipe_line.rs  scope_guard.rs  take_vec.rs
src/vulkan_renderer/: buffer.rs  builder.rs  context.rs  create_vertex_buffer.rs  memory.rs  render_targets.rs  single_time_command.rs  swapchain.rs  uniform_buffer_object.rs  validation_layers.rs  vulkan_context.rs  vulkan_interface.rs
src/vulkan_renderer/buffer/: errors.rs
src/vulkan_renderer/context/: builder.rs  (+1 more)
src/vulkan_renderer_old/: builder.rs  swapchain.rs  sync_objects.rs
(+65 files in other folders)
