[package]
name = "hitchhikers-engine"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/linear-algebra",
    "crates/image-parser",
    "crates/model",
    "crates/he42-vulkan",
]

[features]
validation_layers = []

[dependencies]
linear-algebra = { path = "./crates/linear-algebra" }
image-parser = { path = "./crates/image-parser" }
model = { path = "./crates/model" }
he42-vulkan = { path = "./crates/he42-vulkan" }

# Utilities
rs42 = "0.2.0"

# TODO replace this with he42-vulkan
ash = "0.38.0"

# Window
winit = "0.30.5"
ash-window = "0.13.0"
